--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.1.0",
+    "@types/aos": "^3.0.5",
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bufferutil": "^4.0.7",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
     "formik": "^2.4.3",
     "next": "13.4.13",
     "next-auth": "^4.23.0",
@@ -32,17 +36,24 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fade-in": "^2.0.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.1.2",
+    "react-slick": "^0.29.0",
     "recharts": "^2.8.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
+    "taos": "^1.0.5",
     "timeago.js": "^4.0.2",
     "typescript": "5.1.6",
     "utf-8-validate": "^6.0.3",
     "ws": "^8.13.0",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
