--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ NEXT_PUBLIC_SERVER_URI = " https://forextrade-6803a3f3a4b8.herokuapp.com/api/v1"
 
 NEXT_PUBLIC_SOCKET_SERVER_URI = "https://forextrade-6803a3f3a4b8.herokuapp.com/"
 
+SERVER_URI = "https://forextrade-6803a3f3a4b8.herokuapp.com"
+
 GOOGLE_CLIENT_ID = '387756826245-hcmu0ro9t6qkhhdvn04f0sgq8n684or9.apps.googleusercontent.com'
 
 GOOGLE_CLIENT_SECRET = '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'
