--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_SERVER_URI = " https://forextrade-6803a3f3a4b8.herokuapp.com/api/v1"
 
+NEXT_PUBLIC_ORIGIN_URI = " https://forex-bykrunet.vercel.app"
+
 NEXT_PUBLIC_SOCKET_SERVER_URI = "https://forextrade-6803a3f3a4b8.herokuapp.com/"
 
 SERVER_URI = "https://forextrade-6803a3f3a4b8.herokuapp.com"
