--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_SERVER_URI = " https://forextrade-6803a3f3a4b8.herokuapp.com/api/v1"
 
-NEXT_PUBLIC_ORIGIN_URI = " https://forex-bykrunet.vercel.app"
+NEXT_PUBLIC_ORIGIN_URI = " https://www.forextradebycoachnet.com"
 
 NEXT_PUBLIC_SOCKET_SERVER_URI = "https://forextrade-6803a3f3a4b8.herokuapp.com/"
 
