--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "bufferutil": "^4.0.7",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "file-loader": "^6.2.0",
+    "file-saver": "^2.0.5",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "formik": "^2.4.3",
@@ -39,6 +41,7 @@
     "react-fade-in": "^2.0.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-pdf": "^7.5.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.1.2",
     "react-slick": "^0.29.0",
