--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.6",
     "@types/react-slick": "^0.23.10"
   }
 }
