--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-NEXT_PUBLIC_SERVER_URI = " https://forextrade-6803a3f3a4b8.herokuapp.com/api/v1"
+NEXT_PUBLIC_SERVER_URI = "https://forex-api.teeraweb.shop/api/v1"
 
-NEXT_PUBLIC_ORIGIN_URI = " https://www.forextradebycoachnet.com"
+NEXT_PUBLIC_ORIGIN_URI = "https://www.forextradebycoachnet.com"
 
-NEXT_PUBLIC_SOCKET_SERVER_URI = "https://forextrade-6803a3f3a4b8.herokuapp.com/"
+NEXT_PUBLIC_SOCKET_SERVER_URI = "https://forex-api.teeraweb.shop"
 
-SERVER_URI = "https://forextrade-6803a3f3a4b8.herokuapp.com"
+SERVER_URI = "https://forex-api.teeraweb.shop"
 
 GOOGLE_CLIENT_ID = '387756826245-hcmu0ro9t6qkhhdvn04f0sgq8n684or9.apps.googleusercontent.com'
 
