--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.0.0",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mdxeditor/editor": "^1.8.1",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.14.7",
     "@mui/x-data-grid": "^6.11.2",
@@ -34,10 +37,13 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "formik": "^2.4.3",
+    "jodit-react": "^1.3.39",
+    "jquery": "^3.7.1",
     "next": "13.4.13",
     "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fade-in": "^2.0.1",
@@ -45,8 +51,10 @@
     "react-icons": "^4.10.1",
     "react-pdf": "^7.5.1",
     "react-pro-sidebar": "^0.7.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-slick": "^0.29.0",
+    "react-summernote-lite": "^1.1.7",
     "recharts": "^2.8.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
