--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
+    "ai": "^2.2.22",
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -42,6 +43,7 @@
     "next": "13.4.13",
     "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.27",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "18.2.0",
